@@ -1,4 +1,8 @@
-﻿drkns 02.02.2016 21:34:08 +0200 - build 4534
+﻿drkns 02.02.2016 22:19:45 +0200 - build 4535
+
+1. С форума: запуск far /v или far /e при включенном автосохранении сбивал настройки панелей.
+
+drkns 02.02.2016 21:34:08 +0200 - build 4534
 
 1. Уточнение 4525 для нетривиальных условий запуска.
 
